# TwistySolver

./: .gitignore  CMakeLists.txt
src/: CenterPiece.cpp  CenterPiece.h  Coordinate.cpp  Coordinate.h  CornerPiece.cpp  CornerPiece.h  Cube.cpp  Cube.h  CubeProperties.cpp  CubeProperties.h  EdgePiece.cpp  EdgePiece.h  NEdgePiece.cpp  NEdgePiece.h  OrientationCoordinate.cpp  OrientationCoordinate.h  ParityCoordinate.cpp  ParityCoordinate.h  Parser333.cpp  Parser333.h  Parser444.cpp  Parser444.h  PermutationCoordinate.cpp  PermutationCoordinate.h  Phase.h  PhaseStack.h  PositionCoordinate.cpp  PositionCoordinate.h  PruningTable.h  Solver333.cpp  Solver333.h  Solver444.cpp  Solver444.h  Utils.cpp  Utils.h  Vision.cpp  Vision.h  main.cpp  myconio.cpp  myconio.h  (+1 more)
tests/: coordinate.cpp  cube.cpp  solver.cpp  utils.cpp
